[package]
name = "prn"
version = "0.2.1"
edition = "2024"
description = "Pending Review Notifier — nags you about your own forgotten pending GitHub reviews"
repository = "https://github.com/coreyja-studio/pending-review-notifier"

# The `service` feature exists only to gate the service bin: cargo-binstall
# skips bins whose required-features aren't met, so `cargo binstall prn`
# installs just the prebuilt `prn-check`. Default-on keeps plain
# `cargo build` / the Fly Dockerfile building the service unchanged.
[features]
default = ["service"]
service = []

# The service binary (docs/DESIGN.md): web/jobs/DB stack.
[[bin]]
name = "prn"
path = "src/main.rs"
required-features = ["service"]

# `prn-check` is the standalone CLI (docs/DESIGN.md "CLI mode"): it links
# src/discovery.rs directly via #[path] and never touches the web/jobs/DB stack.
[[bin]]
name = "prn-check"
path = "src/prn_check/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/prn-check-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
cja = { git = "https://github.com/coreyja/cja", rev = "d23caa0" }

tokio = { version = "1.21", features = ["full"] }
axum = "0.8"
maud = { version = "0.27", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", default-features = false, features = [
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
  "migrate",
  "macros",
  "uuid",
  "json",
] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
color-eyre = "0.6"
tracing = "0.1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  # Also trust the OS trust store / SSL_CERT_FILE (in addition to webpki
  # roots): prn-check runs on user machines, some behind TLS-intercepting
  # proxies whose CA only exists in the system store.
  "rustls-tls-native-roots",
  "json",
] }

base64 = "0.22"
chacha20poly1305 = "0.10"
hex = "0.4"
rand = "0.8"
subtle = "2"
tower-cookies = { version = "0.11", features = ["signed", "private"] }
url = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
